# Structured-Data-Extraction-from-Laboratory-Reports

./: README.md  pyproject.toml
src/insights/: app.py
src/insights/lab_report_LLM_extractor/: extraction.py
src/insights/utility/: lab_report_preprocessor.py  pdf_to_text.py
